{
  "version": 4,
  "terraform_version": "1.10.2",
  "serial": 25,
  "lineage": "e527d488-0999-90bf-da56-a82a76bfc74c",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/afa1a461-3f97-478d-a062-c8db00c98741/resourceGroups/adrwal-rg/providers/Microsoft.Network/networkInterfaces/main-nic",
            "internal_domain_name_suffix": "oh2gf1vfjmqexbk55j2iwckscd.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/afa1a461-3f97-478d-a062-c8db00c98741/resourceGroups/adrwal-rg/providers/Microsoft.Network/publicIPAddresses/jenkins-vm-pip",
                "subnet_id": "/subscriptions/afa1a461-3f97-478d-a062-c8db00c98741/resourceGroups/adrwal-rg/providers/Microsoft.Network/virtualNetworks/adrwal-vnet/subnets/adrwal-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "mac_address": "7C-1E-52-75-8A-E1",
            "name": "main-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "adrwal-rg",
            "virtual_machine_id": "/subscriptions/afa1a461-3f97-478d-a062-c8db00c98741/resourceGroups/adrwal-rg/providers/Microsoft.Compute/virtualMachines/jenkins-vm"
          },
          "dependencies": [
            "azurerm_public_ip.jenkins_vm_pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.main_subnet",
            "azurerm_virtual_network.main_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/afa1a461-3f97-478d-a062-c8db00c98741/resourceGroups/adrwal-rg/providers/Microsoft.Network/networkSecurityGroups/adrwal-nsg",
            "location": "westeurope",
            "name": "adrwal-nsg",
            "resource_group_name": "adrwal-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh_rule",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "https_rule",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "http_rule",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "jenkins_rule",
                "priority": 1004,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/afa1a461-3f97-478d-a062-c8db00c98741/resourceGroups/adrwal-rg/providers/Microsoft.Network/networkSecurityGroups/adrwal-nsg/securityRules/http_rule",
            "name": "http_rule",
            "network_security_group_name": "adrwal-nsg",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "adrwal-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main_nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "https_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/afa1a461-3f97-478d-a062-c8db00c98741/resourceGroups/adrwal-rg/providers/Microsoft.Network/networkSecurityGroups/adrwal-nsg/securityRules/https_rule",
            "name": "https_rule",
            "network_security_group_name": "adrwal-nsg",
            "priority": 1003,
            "protocol": "Tcp",
            "resource_group_name": "adrwal-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main_nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "jenkins_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "8080",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/afa1a461-3f97-478d-a062-c8db00c98741/resourceGroups/adrwal-rg/providers/Microsoft.Network/networkSecurityGroups/adrwal-nsg/securityRules/jenkins_rule",
            "name": "jenkins_rule",
            "network_security_group_name": "adrwal-nsg",
            "priority": 1004,
            "protocol": "Tcp",
            "resource_group_name": "adrwal-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main_nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/afa1a461-3f97-478d-a062-c8db00c98741/resourceGroups/adrwal-rg/providers/Microsoft.Network/networkSecurityGroups/adrwal-nsg/securityRules/ssh_rule",
            "name": "ssh_rule",
            "network_security_group_name": "adrwal-nsg",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "adrwal-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main_nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "jenkins_vm_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/afa1a461-3f97-478d-a062-c8db00c98741/resourceGroups/adrwal-rg/providers/Microsoft.Network/publicIPAddresses/jenkins-vm-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.180.46.117",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "jenkins-vm-pip",
            "resource_group_name": "adrwal-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "main_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/afa1a461-3f97-478d-a062-c8db00c98741/resourceGroups/adrwal-rg/providers/Microsoft.Network/virtualNetworks/adrwal-vnet/subnets/adrwal-subnet",
            "name": "adrwal-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "adrwal-rg",
            "virtual_network_name": "adrwal-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.main_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_for_main_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/afa1a461-3f97-478d-a062-c8db00c98741/resourceGroups/adrwal-rg/providers/Microsoft.Network/virtualNetworks/adrwal-vnet/subnets/adrwal-subnet",
            "network_security_group_id": "/subscriptions/afa1a461-3f97-478d-a062-c8db00c98741/resourceGroups/adrwal-rg/providers/Microsoft.Network/networkSecurityGroups/adrwal-nsg",
            "subnet_id": "/subscriptions/afa1a461-3f97-478d-a062-c8db00c98741/resourceGroups/adrwal-rg/providers/Microsoft.Network/virtualNetworks/adrwal-vnet/subnets/adrwal-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.main_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.main_subnet",
            "azurerm_virtual_network.main_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ee62f871-4ba5-4b20-855f-fa788b095213",
            "id": "/subscriptions/afa1a461-3f97-478d-a062-c8db00c98741/resourceGroups/adrwal-rg/providers/Microsoft.Network/virtualNetworks/adrwal-vnet",
            "location": "westeurope",
            "name": "adrwal-vnet",
            "resource_group_name": "adrwal-rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/afa1a461-3f97-478d-a062-c8db00c98741/resourceGroups/adrwal-rg/providers/Microsoft.Network/virtualNetworks/adrwal-vnet/subnets/adrwal-subnet",
                "name": "adrwal-subnet",
                "security_group": "/subscriptions/afa1a461-3f97-478d-a062-c8db00c98741/resourceGroups/adrwal-rg/providers/Microsoft.Network/networkSecurityGroups/adrwal-nsg"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}